--- a/install
+++ b/install
@@ -5,7 +5,7 @@ DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
 #download Pathogen bundles
 echo "Installing Vundle..."
 echo
-git clone https://github.com/gmarik/vundle.git $DIR/vim/bundle/vundle
+git clone git@github.com:gmarik/vundle.git $DIR/vim/bundle/vundle
 echo
 echo "Done."
 echo
